# project-moonlight

./: Project Architecture & Engineering Standards.md  README.md  pyproject.toml
src/rpg/: __main__.py  bootstrap.py
src/rpg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rpg/application/: dtos.py
src/rpg/application/services/: character_creation_service.py  combat_service.py  encounter_flavour.py  encounter_service.py  event_bus.py  game_service.py  world_progression.py
src/rpg/application/spells/: spell_definitions.py
src/rpg/domain/: events.py  repositories.py
src/rpg/domain/models/: character.py  character_class.py  character_options.py  encounter_definition.py  entity.py  faction.py  location.py  spell.py  stats.py  world.py
src/rpg/domain/services/: character_factory.py  class_profiles.py  encounter_planner.py
src/rpg/infrastructure/: open5e_client.py
src/rpg/infrastructure/db/: create_tables.sql
src/rpg/infrastructure/inmemory/: inmemory_character_repo.py  inmemory_class_repo.py  inmemory_entity_repo.py  (+4 more)
src/rpg/presentation/: character_creation_ui.py  cli.py  game_loop.py  load_menu.py  main_menu.py  menu_controls.py  rolling_ui.py
tests/: __init__.py  test_game_logic.py  test_inmemory_repositories.py  test_mysql_repositories.py
tests/e2e/: test_cli_flow.py
tests/integration/: test_mysql_repositories.py  test_mysql_repositories_integration.py  test_open5e_monster_importer.py
tests/unit/: test_character_creation_races.py  test_character_factory.py  test_encounter_planning.py  test_event_bus_progression.py  test_open5e_client.py
(+11 files in other folders)
