[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg"
version = "0.1.0"
description = "Turn-based text RPG with deterministic world progression"
authors = [{name = "Your Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"sqlalchemy>=2.0.29",
	"mysql-connector-python>=8.3.0",
	"httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
